src/test/deca/context/valid/provided/testassignparam.deca
class A{
int somme (int x, int y){
x = x+y;
return x;
}
}
