src/test/deca/context/invalid/provided/test_new.deca
//Resultats :
//Erreur contextuelle
//Ligne 6 : Right value doesn't match the expected type

class A {}
{
int x = new A();
}
